--- a/draft_2/script.fountain
+++ b/draft_2/script.fountain
@@ -1,18 +1,19 @@
 INT. HIGH SCHOOL HALLWAY - DAY
 
-FADE IN on a hallway display case decorated to promote the upcoming science fair. There are three pictures of the winner of the past three years. All three pictures are of the same girl - ANNIKA HAVNER. We track down the three pictures of Annika and land on a fourth image - is a "no profile picture" avatar with the question mark face. We pull back from that blank avatar to reveal LAURA SUITES, a clueless nerd, staring into that avatar while deep in though.
+FADE IN on a hallway display case decorated to promote the upcoming science fair. There are three pictures of the winner of the past three years. All three pictures are of the same girl - ANNIKA HAVNER.
 
-The adjacent display case has a "congratulations seniors" mural. There is a picture of every member of the senior class in alphabetical order. Above all the other senior pictures are two pictures with a special border around them. These are of Annika and Laura and are accompanied with labels for valedictorian and salutatorian respectively.
+We track down the three pictures of Annika and land on a fourth image - it's a "no profile picture" avatar with a question mark face over a blank face. We pull back from the blank avatar to reveal LAURA SUITES, a hopelessly dressed nerd, staring at the blank image while deep in though.
 
-The bell rings and students start to change classes.
+The BELL RINGS and students start to change classes.
 
 INT. GYMNASIUM - DAY
 
 High school students set up for the science fair.
 
-Laura is arranging large, cone-shaped pieces of plastic on her table. She measures and puts markings so they are exactly the same distance apart.
+Laura is arranging large, cone-shaped pieces of plastic on her table. Each on is paired with a styrofoam mold of the same shape. She measures and puts markings so the cones are exactly the same distance apart.
 
 NORM (O.S.)
+(Re: a four-foot rocket on Laura's table)
 That is incredible.
 
 NORM DUKLER, an equally hopeless nerd, approaches Laura as she sets up. He's pulling a wagon full of gallon-sized jugs with chemical warning stickers on them.
@@ -23,7 +24,7 @@ I really think you've got a good shot this year.
 LAURA
 Thank's, Norm. Just give me a second. This is the last thing I have to set up.
 
-She places prepared labels in front of them on themed name cards made out to look like text on the displays of spaceship computers.
+She places prepared labels in front of each cone. The labels are on themed name cards made out to look like spaceship computers.
 
 Norm looks over her shoulder as she does this.
 
@@ -31,10 +32,10 @@ NORM
 You've outdone yourself.
 
 LAURA
-I have to outdo more than myself to win.
+I have to outdo more than myself.
 
 NORM
-Come on, you got it. And even if she wins again, so what?
+Come on, you got it. And even if she does win again, so what?
 
 LAURA
 So what, Norm? So what?
@@ -42,16 +43,23 @@ So what, Norm? So what?
 NORM
 I'm just saying, in three weeks we'll be out of this shit hole forever.
 
+Laura folds up some of the large paper bags used to transport her project materials.
+
 LAURA
-Norm, this isn't a big deal for her. She's just gonna swoop in here with some Ph.D level research that I probably won't understand. She'll have used her parent's money to test that research with equipment that many universities can't even afford. And then she's going to give a stunning, seamlessly executed multimedia presentation that'll be both informative and entertaining. And you know what, I don't care that she's freakishly smart, or athletic, or prettier, or more popular than I am - that really doesn't bother me at all. I like who I am. But I will tell you this, Norm - not a single soul at this science fair, especially not that dark hearted ghost that inhibits Annika Havnar, nobody, loves science as much as I do.
+Norm, this isn't a big deal for her. She's just gonna swoop in here with some Ph.D level research that I probably won't understand. She'll have used her parent's money to test that research with equipment that many universities can't even afford. And then she's going to give a stunning, seamlessly executed multimedia presentation that'll be both informative and entertaining.
+
+Norm is now unpacking his project pieces from his wagon onto Laura's adjacent table.
+
+LAURA
+And you know what, I don't care that she's freakishly smart, or athletic, or prettier, or more popular than I am - that really doesn't bother me at all. I like who I am. But I will tell you this, Norm - not a single soul at this science fair, especially not that dark hearted ghost that inhibits Annika Havnar, nobody, loves science as much as I do.
 
 NORM
 Okay! Right! That's what I'm talking about.
 
-Laura smiles proudly. She admired her work.
+Laura smiles proudly. She admires her work.
 
 LAURA
-(turning to Norm)
+(Turning to Norm)
 Oh my god! What are you doing?
 
 Norm is carelessly pouring a jug of concentrated acid into a test tube.
@@ -71,7 +79,7 @@ Are you serious?
 
 NORM
 I know, right? My mom said it was a great idea too.
-(re: her rocket)
+(Re: her rocket)
 Hey did you actually launch that thing?
 
 LAURA
@@ -81,7 +89,7 @@ Laura bends down and pulls her laptop out of her backpack.
 
 LAURA
 (Opening her laptop and searching for the file)
-I have footage of every single trial that I ran, and it's edited together, and it's got cool titles and music, and it's right... where is it? Oh my god, Norm.
+I have footage of every single trial that I ran, and it's edited together, and it's got cool titles and music, and it's right... where is it? Oh my god. Norm.
 
 NORM
 What?
@@ -90,6 +98,7 @@ LAURA
 I can't find my fucking launch footage!
 
 NORM
+(Pouring a new acid 'decoration')
 Oh. Shit. Did you put it on a different hard drive?
 
 LAURA
@@ -108,11 +117,12 @@ Sorry.
 The teacher flashes her with a "you better be sorry" look as she continues walking away between the aisle of science fair tables. 
 
 Approaching from the other direction is Annika. She is accompanied by a posse of hot, athletic seniors who are all carrying parts of her project.
+[[that look very expensive...]]
 
 LAURA
 Shit.
 
-Annika and her posse stop when reach Laura and Norm.
+Annika and her posse stop when they reach Laura and Norm.
 
 ANNIKA
 Laura. Hmm, a rocket. Very interesting. Let me guess - methane based fuel mixture ratios?
@@ -121,7 +131,17 @@ LAURA
 Nose cone aerodynamics.
 
 ANNIKA
-Ahh, touché! So I assume you've been doing a lot of reading regarding extraterrestrial atmospheres. How did you simulate different atmospheres for your trials?
+Ahh, touché!
+
+Annika nears the table and picks up one of Laura's nose cones.
+
+ANNIKA
+So I assume you've been doing a lot of reading regarding extraterrestrial atmospheres.
+
+Laura snatches the cone out of Annika's hand.
+
+ANNIKA
+Touchy, touchy, aren't we Laura? Surly a part that you quite literally rocketed into the sky can withstand being lifted off a table. Now tell me, how did you simulate different atmospheres for your trials?
 
 LAURA
 I didn't simulate anything.
@@ -130,16 +150,21 @@ ANNIKA
 So, what independent variables did you test if not the effect of extraterrestrial atmospheres on aerodynamic efficiency?
 
 LAURA
-Nose cone shape.
+Cone shape.
 
 ANNIKA
-Oh. Well I'm sure your work has proved very insightful.
+Oh. Well I'm sure all of this has proved very insightful.
 
-LAURA
-What did you do?
+Laura clenches down.
+
+/*
+
+One of the posse members needs to be wheeling a cryogenic cooler or something. Remember, her project is over the topppp! What is your image of what that would be?
+
+*/
 
 ANNIKA
-Me? I've been working on a gene enhancement compound. I've actually been able to correct genetic mutations in a number of single-celled organisms.
+Sure must have been nice working on a topic in such a glamorous field of study. 'Would have loved to do a space project, you know. But, alas, duty calls. I really felt that my efforts could be of the most benefit in the biomedical realm. My gene enhancement compound might not be as dazzling as your rocket, but I guess we'll just have to leave it up to the judges, won't we?
 
 Laura is speechless. Her eyes begin to well.
 
@@ -152,3 +177,115 @@ NORM
 Don't worry about her.
 
 Laura begins to weep and runs out of the gym.
+
+INT. GYMNASIUM - DAY (LATER)
+
+The science fair is in full swing with students and teachers checking out tables. 
+
+At the front of the room, standing on an elevated platform, is a fat SCIENCE TEACHER. She taps the mic.
+
+SCIENCE TEACHER
+Excuse me, everyone.
+
+As she makes her announcement she walks too close to the large speaker on stage. Signal feedback quickly snowballs to a deafening level before she is able to turn the PA system off.
+
+SCIENCE TEACHER
+Sorry.
+
+The annoyed crowd members remove their hands from their ears.
+
+SCIENCE TEACHER
+Anyhoo, the judges' votes are in and it's time to announce the award winners. But before we I do, I'd just like to say how proud I am of all of this year's participants. We have some truly amazing projects and I want everyone to take a moment to give all of our participants a well deserved round of applause.
+
+INT. HIGH SCHOOL HALLWAY - DAY
+
+We hold on set of doors with a "Costodial Closet" sign next to them. The faint CLAPPING can be heard coming from the gym.
+
+SCIENCE TEACHER (OS)
+Now, without further adieu, on to the awards.
+
+We begin to PUSH IN on the janitors closet.
+
+SCIENCE TEACHER (OS)
+The award for "most environmental" project goes to James Strop - River Ecosystems.
+
+INT. JANITOR'S CLOSET - DAY
+
+/*
+
+Could this be a science closet and the wrench / bat be a science thing?
+
+*/
+
+Laura sits in the closet with her arms wrapped around her knees, cheeks wet, staring at a huge pipe wrench.
+
+SCIENCE TEACHER
+The award for "most technological" goes to Sam Rainer - Robot Showdown.
+
+Dull CLAPPING and CHEERING from the gym.
+
+INT. GYMNASIUM - DAY
+
+All eyes are on the science teacher. 
+
+SCIENCE TEACHER
+And now, the moment you've all been waiting for.
+
+INT. HALLWAY - DAY
+
+Laura marches down the hall with the bat/wrench and a crazed look in her eyes.
+
+SCIENCE TEACHER (OS)
+The grand prize winner of this years science fair is --
+
+/*
+
+Low angle pointing up toward a MCU of her. We're tracking back with her as she walks.
+
+Then low of the bat dragging behind her with only her lower legs and feet and bat in the frame.
+
+*/
+
+INT. GYM - CONTINUOUS
+
+The students wait with baited breath.
+
+The song *Say My Name* by Tove Styrke begins to play.
+
+Laura turns to the camera, breaking the fourth wall, and begins dancing - full of attitude and a swagger unfitting for someone of her nerdiness. She attracts bewildered stares from the crowd.
+
+She dances through the aisles of projects and starts knocking poster boards over and sliding displays off of tables onto the floor.
+
+Some victimized students start to stand up to her, but everyone quickly steps back when she grabs a baseball bat from a students gym bag and starts demolishing projects. She's swinging for the fences with a mad look in her eyes.
+
+Everyone seeks cover behind chair and bleachers or against the walls of the gym.
+
+INT. MAIN OFFICE - DAY
+
+The fat science teacher runs in and tells the principal.
+
+INT. HALLWAY - DAY
+
+Cops walk down the hall.
+
+INT. GYM - DAY
+
+Laura is beating down a paper maché volcano when she notices the cops. They apprehend her and begin to drag her out of the gym. She resists by flailing and kicking here legs.
+
+As they pass Annika's gene enhancement project, one of Laura's kicks bumps the table. The force knocks one of test tubes loose. It falls into a Petri dish on the adjacent table (River Ecosystems) and the dish starts to bubble and ooze. And mutant green webbed hand comes out of the ooze.
+
+Everyone is too busy paying attention to Laura being pulled out of the gym by the police that no one notices the huge mutant monster that has evolved from the combination of Annika's gene enhancement compound and the microorganism from the river ecosystems project.
+
+When the monster is fully formed, it grabs Annika by her ponytail and begins to devour her. Annika's screams draw everyone's attention to the monster and away from Laura and the cops.
+
+The cops turn to see Annika getting eaten. They drop Laura and run toward the grizzly scene as they draw their guns and shoot. Everyone in the gym flees in panic.
+
+INT. HALLWAY - DAY
+
+Laura is running in the pack of panicking students. They pass the sign "Science Fair Today! How science are you?". Laura stops and looks at the sign. Then, with determination, she turns around a marches against the rushing current of escapees.
+
+INT. HIGH SCHOOL GYM - DAY
+
+The monster is feasting on the torn open bodies of Annika and the cops.
+
+Laura enters the gym. As she passes her project table, she assembles a makeshift torpedo launcher with her rocket and some of Norman's pool cleaning acid. She places the rocket on her shoulder as she gets down on one knee. With zero hesitation, she fires the rocket at the monster. The acid explodes upon impact and the monster begins to melt.
