Continue working on second act

--- a/draft_3/outline.fountain
+++ b/draft_3/outline.fountain
@@ -1,58 +1,366 @@
-Remember what this is about. This is about wanting to be the center of attention. How can we show Laura's ultimate desire to be adored by everyone? What is her image of this state of adoration? And how can we show this? Day dream? What evidence do we have of her complete obsession with being the best?
+INT. HIGH SCHOOL HALLWAY - DAY
 
-INT. HALLWAY - DAY
+FADE IN on a hallway display case decorated to promote the upcoming science fair. There are three pictures of the winner of the past three years. All three pictures are of the same girl - ANNIKA HAVNER.
 
-Laura walks past a display case in the hallway showing pictures of the past three years of science fair winner. There are three pictures of Annika from grades nine through eleven. She is standing by each project. The top of the sign says "Science fair today! How science are you?"
+We track down the three pictures of Annika and land on a fourth image - it's a "no profile picture" avatar with a question mark face over a blank face. We pull back from the blank avatar to reveal LAURA SUITES, a hopelessly dressed nerd, staring at the blank image while deep in though.
 
-We track down from that to the three images of Annika and then reveal Laura looking at the blank space for this year with a question mark avatar. She is lost in a daydream when the bell rings.
+The BELL RINGS and students start to change classes.
 
-INT. HALLWAY - DAY
+INT. GYMNASIUM - DAY
 
-She's standing in front of the display case. There's the past science fair winners and also a congrats to the seniors with pictures of both the valedictorian and the salutatorian and smaller pictures of the rest of the class.
+High school students set up for the science fair.
 
-Laura is just staring at that blank space for this year. It's literally her last chance to beat her.
+Laura is arranging large, cone-shaped pieces of plastic on her table. Each on is paired with a styrofoam mold of the same shape. She measures and puts markings so the cones are exactly the same distance apart.
 
-INT. GYM - DAY
+NORM (O.S.)
+(Re: a four-foot rocket on Laura's table)
+That is incredible.
 
-She's on a mission setting up this table. Everything is riding on this preparation right here. There is a high intensity here. If we're really telling a story about her from her POV this shit has to be tense. High stakes. It has to feel that way to in order to sympathize with her. We need to feel the drop in the pit of her stomach when she realizes she can't find the footage. We need to feel the room start to spin and the voices fade into a dull buzz.
+NORM DUKLER, an equally hopeless nerd, approaches Laura as she sets up. He's pulling a wagon full of gallon-sized jugs with chemical warning stickers on them.
 
-Then with the shrill squeak of a violin and a breaking glass, Annika enters.
+NORM
+I really think you've got a good shot this year.
 
-The words "gene enhancement compound" echo thunderously in her skull as her face is drained lifeless of blood and hope.
+LAURA
+Thank's, Norm. Just give me a second. This is the last thing I have to set up.
 
-Then when she leave's Laura is completely isolated. Even Norm has left her because he's so stupid.
+She places prepared labels in front of each cone. The labels are on themed name cards made out to look like spaceship computers.
 
-INT. GYM - DAY (LATER)
+Norm looks over her shoulder as she does this.
 
-This is the moment of transformation. She emerges from her cocoon (gym equipment closet) with a new determination. In that moment she lost all desire to play in this game. She decided fuck all and couldn't be less interested winning anymore. This is where the rampage begins.
+NORM
+You've outdone yourself.
 
-Dancing
+LAURA
+I have to outdo more than myself.
 
-While the monster is wreaking havoc it has a King Kong moment where it falls in love with a fish in a tank.
+NORM
+Come on, you got it. And even if she does win again, so what?
 
-INT. GYM - DAY
+LAURA
+So what, Norm? So what?
 
-As the monster is dying, it turns to see it's love swimming with another fish. It goes into a fantasy while *Dancing on My Own* plays.
+NORM
+I'm just saying, in three weeks we'll be out of this shit hole forever.
 
-As they exchange glances, we transition into a anime.
+Laura folds up some of the large paper bags used to transport her project materials.
+
+LAURA
+Norm, this isn't a big deal for her. She's just gonna swoop in here with some Ph.D level research that I probably won't understand. She'll have used her parent's money to test that research with equipment that many universities can't even afford. And then she's going to give a stunning, seamlessly executed multimedia presentation that'll be both informative and entertaining.
+
+Norm is now unpacking his project pieces from his wagon onto Laura's adjacent table.
+
+LAURA
+And you know what, I don't care that she's freakishly smart, or athletic, or prettier, or more popular than I am - that really doesn't bother me at all. I like who I am. But I will tell you this, Norm - not a single soul at this science fair, especially not that dark hearted ghost that inhibits Annika Havnar, nobody, loves science as much as I do.
+
+NORM
+Okay! Right! That's what I'm talking about.
+
+Laura smiles proudly. She admires her work.
+
+LAURA
+(Turning to Norm)
+Oh my god! What are you doing?
+
+Norm is carelessly pouring a jug of concentrated acid into a test tube.
+
+NORM
+Decoration.
+
+Laura stares speechless and slightly shaking.
+
+NORM
+Oh! You mean my project? Okay, so, my hypothesis is: what chemical is the best cleaner for pool filters? I call it, *Pool Chemical Showdown*.
+
+He opens up his poster board as he says "Pool Chemical Showdown".
+
+LAURA
+Are you serious?
+
+NORM
+I know, right? My mom said it was a great idea too.
+(Re: her rocket)
+Hey did you actually launch that thing?
+
+LAURA
+Shit. What am I doing?
+
+Laura bends down and pulls her laptop out of her backpack.
+
+LAURA
+(Opening her laptop and searching for the file)
+I have footage of every single trial that I ran, and it's edited together, and it's got cool titles and music, and it's right... where is it? Oh my god. Norm.
+
+NORM
+What?
+
+LAURA
+I can't find my fucking launch footage!
+
+NORM
+(Pouring a new acid 'decoration')
+Oh. Shit. Did you put it on a different hard drive?
+
+LAURA
+I don't have a different hard drive. God fucking damn it!
+
+A teacher passes behind Laura.
+
+TEACHER
+Language!
+
+Laura turns and notices the teacher.
+
+LAURA
+Sorry.
+
+The teacher flashes her with a "you better be sorry" look as she continues walking away between the aisle of science fair tables. 
+
+Approaching from the other direction is Annika. She is accompanied by a posse of hot, athletic seniors who are all carrying expensive science equipment.
+
+LAURA
+Shit.
+
+Annika and her posse stop when they reach Laura and Norm.
+
+ANNIKA
+Laura. Hmm, a rocket. Very interesting. Let me guess - methane based fuel mixture ratios?
+
+LAURA
+Nose cone aerodynamics.
+
+ANNIKA
+Ahh, touché!
+
+Annika nears the table and picks up one of Laura's nose cones.
+
+ANNIKA
+So I assume you've been doing a lot of reading regarding extraterrestrial atmospheres.
+
+Laura snatches the cone out of Annika's hand.
+
+ANNIKA
+Touchy, touchy, aren't we Laura? Surly a part that you quite literally rocketed into the sky can withstand being lifted off a table. Now tell me, how did you simulate different atmospheres for your trials?
+
+LAURA
+I didn't simulate anything.
+
+ANNIKA
+So, what independent variables did you test if not the effect of extraterrestrial atmospheres on aerodynamic efficiency?
+
+LAURA
+Cone shape.
+
+ANNIKA
+Oh. Well I'm sure all of this has proved very insightful.
+
+Laura clenches down.
 
 /*
 
-What is this "monster's" spine. It was brought into this world without being asked to exist. It is the only one of it's kind. All it has known since it's birth has been fear and hate. And now, all of a sudden, it feels love. But the love it feels is unrequited.
+One of the posse members needs to be wheeling a cryogenic cooler or something. Remember, her project is over the topppp! What is your image of what that would be?
 
 */
 
-He's in love with her but he's not from her world. Classic Romeo & Juliet.
+ANNIKA
+Sure must have been nice working on a topic in such a glamorous field of study. 'Would have loved to do a space project, you know. But, alas, duty calls. I really felt that my efforts could be of the most benefit in the biomedical realm. My gene enhancement compound might not be as dazzling as your rocket, but I guess we'll just have to leave it up to the judges, won't we?
 
-What does he do? What is his spine? His motivation? He has never been understood his whole life. He is a freak and people have tried to kill him just for being alive. That's his spine. He just wants to feel something different. Maybe when she rejects him he tries to kill himself?
+Laura is speechless. Her eyes begin to well.
 
+ANNIKA
+Right, well. I must get set up. Oh, by the way... You applied to MIT, didn't you? I just got my acceptance letter yesterday, so you'll probably be hearing back any day now. Best of luck, Laura.
 
-What is this whole movie about? What is the "walk away factor"?
+She walks off and Laura and Norm watch her go.
 
-The first act is about being overshadowed.
+NORM
+Don't worry about her.
 
-The second is about being unaccepted/unloved.
+Laura begins to weep and runs out of the gym.
 
-The third is about an epic tale of escaping the world or saving it. It's about a Bruce Willis / Matthew McConaughey get in a rocket and save humanity kind of thing. The rocket is the LAURA HEAVY and the astronaut takes some gene enhancement compound to get super strength so she can tear open the wall of the spaceship in the final moment.
+INT. GYMNASIUM - DAY (LATER)
 
-But even so, what is the spine of the hero in the third story? What is her background? We 
+The science fair is in full swing with students and teachers checking out tables. 
+
+At the front of the room, standing on an elevated platform, is a fat SCIENCE TEACHER. She taps the mic.
+
+SCIENCE TEACHER
+Excuse me, everyone.
+
+As she makes her announcement she walks too close to the large speaker on stage. Signal feedback quickly snowballs to a deafening level before she is able to turn the PA system off.
+
+SCIENCE TEACHER
+Sorry.
+
+The annoyed crowd members remove their hands from their ears.
+
+SCIENCE TEACHER
+Anyhoo, the judges' votes are in and it's time to announce the award winners. But before we I do, I'd just like to say how proud I am of all of this year's participants. We have some truly amazing projects and I want everyone to take a moment to give all of our participants a well deserved round of applause.
+
+INT. HIGH SCHOOL HALLWAY - DAY
+
+We hold on set of doors with a "Costodial Closet" sign next to them. The faint CLAPPING can be heard coming from the gym.
+
+SCIENCE TEACHER (OS)
+Now, without further adieu, on to the awards.
+
+We begin to PUSH IN on the janitors closet.
+
+SCIENCE TEACHER (OS)
+The award for "most environmental" project goes to James Strop - River Ecosystems.
+
+INT. JANITOR'S CLOSET - DAY
+
+/*
+
+Could this be a science closet and the wrench / bat be a science thing?
+
+*/
+
+Laura sits in the closet with her arms wrapped around her knees, cheeks wet, staring at a huge pipe wrench.
+
+SCIENCE TEACHER
+The award for "most technological" goes to Sam Rainer - Robot Showdown.
+
+Dull CLAPPING and CHEERING from the gym.
+
+INT. GYMNASIUM - DAY
+
+All eyes are on the science teacher. 
+
+SCIENCE TEACHER
+And now, the moment you've all been waiting for.
+
+INT. HALLWAY - DAY
+
+Laura marches down the hall with the bat/wrench and a crazed look in her eyes.
+
+SCIENCE TEACHER (OS)
+The grand prize winner of this years science fair is --
+
+/*
+
+Low angle pointing up toward a MCU of her. We're tracking back with her as she walks.
+
+Then low of the bat dragging behind her with only her lower legs and feet and bat in the frame.
+
+*/
+
+INT. GYM - CONTINUOUS
+
+The students wait with baited breath.
+
+The song *Say My Name* by Tove Styrke begins to play.
+
+Laura turns to the camera, breaking the fourth wall, and begins dancing - full of attitude and a swagger unfitting for someone of her nerdiness. She attracts bewildered stares from the crowd.
+
+She dances through the aisles of projects and starts knocking poster boards over and sliding displays off of tables onto the floor.
+
+Some victimized students start to stand up to her, but everyone quickly steps back when she grabs a baseball bat from a students gym bag and starts demolishing projects. She's swinging for the fences with a mad look in her eyes.
+
+Everyone seeks cover behind chair and bleachers or against the walls of the gym.
+
+INT. MAIN OFFICE - DAY
+
+The fat science teacher runs in and tells the principal.
+
+INT. HALLWAY - DAY
+
+Cops walk down the hall.
+
+INT. GYM - DAY
+
+Laura is beating down a paper maché volcano when she notices the cops. They apprehend her and begin to drag her out of the gym. She resists by flailing and kicking here legs.
+
+As they pass Annika's gene enhancement project, one of Laura's kicks bumps the table. The force knocks one of test tubes loose. It falls into a Petri dish on the adjacent table (River Ecosystems) and the dish starts to bubble and ooze. And mutant green webbed hand comes out of the ooze.
+
+Everyone is too busy paying attention to Laura being pulled out of the gym by the police that no one notices the huge mutant monster that has evolved from the combination of Annika's gene enhancement compound and the microorganism from the river ecosystems project.
+
+When the monster is fully formed, it grabs Annika by her ponytail and begins to devour her. Annika's screams draw everyone's attention to the monster and away from Laura and the cops.
+
+The cops turn to see Annika getting eaten. They drop Laura and run toward the grizzly scene as they draw their guns and shoot. Everyone in the gym flees in panic.
+
+INT. HALLWAY - DAY
+
+Laura is running in the pack of panicking students. They pass the sign "Science Fair Today! How science are you?". Laura stops and looks at the sign. Then, with determination, she turns around a marches against the rushing current of escapees.
+
+INT. HIGH SCHOOL GYM - DAY
+
+The monster is feasting on the torn open bodies of Annika and the cops.
+
+Laura enters the gym. As she passes her project table, she assembles a makeshift torpedo launcher with her rocket and some of Norman's pool cleaning acid. She places the rocket on her shoulder as she gets down on one knee. With zero hesitation, she fires the rocket at the monster.
+
+The acid explodes upon impact.
+
+INT. APARTMENT - DUSK
+
+The monster woman wakes up from the nightmare. It's anime world now.
+
+She gets ready for work in her shitty apartment. She's putting on waitress clothes.
+
+What in her tells us she's looking for love? Or that gives us an insight into what she's going through right now?
+
+She puts on the Robyn song to get ready. She dances in her apartment.
+
+INT. CLUB / RESTAURANT - NIGHT
+
+The monster woman is a dishwasher. The club is high scale edgy. Like drug dealer posh. This is her first day.
+
+As she's cleaning she sees the other fish at a table across the club. She's sitting totally bored as the hood asian gangster looking men at the table jeer and laugh. She's dressed hood too. She's got braids.
+
+The monster falls in love from across the restaurant.
+
+Then the man next to her who is obviously the boss pulls her in to make out with her forcefully. She pushes him off but he easily overpowers her.
+
+What is she going to do about her love? How bad does she want it?
+
+Aka, to make this good, she has to take an action. That action will define her character. What action is she taking??
+
+Maybe at first this monster doesn't feel that she is worthy of love. But then something happens to make her realize that she deserves to be happy.
+
+She can help her escape. That would be an action. What would be the stakes of that? And what would be the positive consequence she would be after? To have her. To run away with her and be in love. But I want to see something... in the apartment, in the beginning, that explains what this all means.
+
+Maybe she is a hopeless romantic dreamer. The other girl isn't trapped, she just has lost all hope that her life could be any different. She see's herself as lucky.
+
+The monster is so poor and wears worn clothing. The fish at least gets to ride in Mercedes instead of riding a scooter. This is in Thailand.
+
+But then she shows her what fun is like and she realizes that the nice things in life are worth fighting for.
+
+How is this done to people? How do people realize that? They have an experience that they've never had before that shows them that love is the strongest force of all.
+
+What part of Goldie's past can we use here to what was the event that she experienced that made her realize that she just had to do anything to make sure she was taken care of.
+
+And then how does Monster touch that part of her?
+
+So we have the why's of why Goldie and Monster need this love laid out in a flashback and the intro scene and we have the how of how Monster is going to get Goldie to open up and accept love in her heart. But what we don't have is the how of how is this all going to go down.
+
+Maybe she had love once but it was taken from her.
+
+So what we have is intro where Monster is in the apartment and we see a glimpse of how much of a dreaming romantic she is. She watches a soap opera while she's getting ready for work and imagines herself as the main character but falling in love with the friend instead of the main guy.
+
+Then at the restaurant we see her getting ordered around and picking up cups and sweeping up broken glass. Goldie catches her eye sitting across the club at a round exclusive table in the corner with two guys who might as well be bodyguards slouch casually on the backs of the booth.
+
+Time freezes for her. She just looses all sense of space and floats into a glittery galaxy kaleidoscope weightless spin and sees both of them on the sitcom. Then snap back to reality. Her reaction is like the life was sucked from her. The camera does a super fast flying whip pan across the whole club to the booth where the boss guy is making out with her and all of the other guys around are laughing. She pushes away but he overpowers her and they laugh even harder.
+
+Then we have to go to their first meeting no? What has to go down?
+
+They have to meet.
+
+Monster needs to have an opportunity to present herself as an interested person.
+
+She needs to get rejected.
+
+We need the flashback of what happened to Goldie and how she was hurt. This is a drug world. The drug is some bad stuff. It's like meth that you stick into yourself with a little push pin that the head was dipped in and it makes you pass the fuck out but awake like a euphoric zombie for a few minutes into a dream like state. Trippy shit. Goldie used to be a dancer at the club and it's Boss's club. She fell in love with another dancer and they danced and pricked together. But they were getting their pins from another guy - the owner of the club wasn't dealing them yet (but this is how he found out about them!). Then one day they were out of money. The lover went to do the deal to a guy outside the club. She was short and he was mad so he chased after her. She runs into the club and the guy follows her. He begins shooting up the place. There's chaos and pandemonium and Goldie's lover gets shot in the crossfire. The Boss is mad gangsta in this moment and kills the other guy. He takes the pins out of his pocket and his eyes light up with opportunity.
+
+Then back to the future. This is Goldie standing in the same spot in the restaurant. This flashback happens in the restaurant right after they meet the first time and the monster tells her by the bathroom that she thinks she's beautiful. The flash back is of her lost lover mouthing the same words. Then when she comes out of the flash back she's nearly brought to tears by the memory. She yells at monster and storms off.
+
+Monster in her small apartment alone watching the soap opera. Only this time she's uninterested. She turns it off and sulks.
+
+Back at the club. She's just cleaning up dishes. Then she's taking the garbage out and when she's in the alley she overhears a fight. It's the Boss yelling at Goldie. He's being belligerent so she's just keeping her mouth shut. Then he slaps her and storms off. She's on the ground in the alley and Monster runs up to her. She kneels down to help her. Then she looks at monster and feels compassion. She stands her up. They both smile and then go off on an epic tuktuk ride. The go to some place and just watch the city from a mountain top. Goldie tells monster of her past.
+
+Then Boss finds out she's gone and that she did something. What is his reason for going?? What's at stake for him?
+
+Her apartment. She gets back and he's waiting there. Goldie and Monster went back together but Monster came in after her to do something so Boss didn't see her when he confronted Goldie and then Monster was able to sneak in and see what was going on without being noticed. She is hiding behind the bushes when she sees him dragging her out and throwing her into the car and speeding off. She calls the cops as she runs after the car. She turns and sees a scooter.
+
+She's scooting down the street and the arrives at the hideout of the other gang.
+
+Now we're at a different place, not the club but kind of like a gangsta office. Maybe the docks. This is where they're dipping the pins in the liquid and packaging them up for the dealers. He's slapping around Goldie when Monster pulls up on the scooter. She sneaks in and when he sees her hitting her she lunges at him and knocks him over. Then the other gangsters show up. And there's a shoot out. Boss shoots Monster, and then him and his gang go out guns blazing. Goldie holds Monster as she's dying. The song ends. 
