Break up full 'Science Fair' film into three individual projects

--- a/draft_2/script.fountain
+++ b/draft_2/script.fountain
@@ -1,8 +1,13 @@
+Title: Science Fair
+Credit: Written by
+Author: Paris Yee
+Draft date: 6/30/2017
+
 INT. HIGH SCHOOL HALLWAY - DAY
 
-FADE IN on a hallway display case decorated to promote the upcoming science fair. There are three pictures of the winner of the past three years. All three pictures are of the same girl - ANNIKA HAVNER.
+FADE IN on a hallway display case decorated to promote the upcoming science fair. There are three pictures of the winners from the past three years. All three pictures are of the same girl - ANNIKA HAVNER.
 
-We track down the three pictures of Annika and land on a fourth image - it's a "no profile picture" avatar with a question mark face over a blank face. We pull back from the blank avatar to reveal LAURA SUITES, a hopelessly dressed nerd, staring at the blank image while deep in though.
+We track down the three pictures of Annika and land on a fourth image - it's a "no profile picture" avatar with a question mark over a blank face. We pull back from the blank avatar to reveal LAURA SUITES, a hopelessly dressed nerd, staring at the blank image while deep in though.
 
 The BELL RINGS and students start to change classes.
 
@@ -43,12 +48,12 @@ So what, Norm? So what?
 NORM
 I'm just saying, in three weeks we'll be out of this shit hole forever.
 
-Laura folds up some of the large paper bags used to transport her project materials.
+Laura neatly folds up the large paper bags used to transport her project materials.
 
 LAURA
-Norm, this isn't a big deal for her. She's just gonna swoop in here with some Ph.D level research that I probably won't understand. She'll have used her parent's money to test that research with equipment that many universities can't even afford. And then she's going to give a stunning, seamlessly executed multimedia presentation that'll be both informative and entertaining.
+Norm, this isn't a big deal for her. She's just gonna swoop in here with some Ph.D level research that I probably won't understand. She'll have used her parent's money to test that research with equipment that most universities can't even afford. And then she's going to give a stunning, seamlessly executed multimedia presentation that'll be both informative and entertaining.
 
-Norm is now unpacking his project pieces from his wagon onto Laura's adjacent table.
+Norm is now unpacking his project pieces from his wagon onto the adjacent table.
 
 LAURA
 And you know what, I don't care that she's freakishly smart, or athletic, or prettier, or more popular than I am - that really doesn't bother me at all. I like who I am. But I will tell you this, Norm - not a single soul at this science fair, especially not that dark hearted ghost that inhibits Annika Havnar, nobody, loves science as much as I do.
@@ -67,7 +72,7 @@ Norm is carelessly pouring a jug of concentrated acid into a test tube.
 NORM
 Decoration.
 
-Laura stares speechless and slightly shaking.
+Laura stares speechless.
 
 NORM
 Oh! You mean my project? Okay, so, my hypothesis is: what chemical is the best cleaner for pool filters? I call it, *Pool Chemical Showdown*.
@@ -97,8 +102,9 @@ What?
 LAURA
 I can't find my fucking launch footage!
 
+Norm is pouring another acid "decoration".
+
 NORM
-(Pouring a new acid 'decoration')
 Oh. Shit. Did you put it on a different hard drive?
 
 LAURA
@@ -116,8 +122,7 @@ Sorry.
 
 The teacher flashes her with a "you better be sorry" look as she continues walking away between the aisle of science fair tables. 
 
-Approaching from the other direction is Annika. She is accompanied by a posse of hot, athletic seniors who are all carrying parts of her project.
-[[that look very expensive...]]
+Approaching from the other direction is Annika. She is accompanied by a posse of hot, athletic seniors who are all carrying expensive-looking project materials.
 
 LAURA
 Shit.
@@ -136,7 +141,7 @@ Ahh, touché!
 Annika nears the table and picks up one of Laura's nose cones.
 
 ANNIKA
-So I assume you've been doing a lot of reading regarding extraterrestrial atmospheres.
+So I assume you've been doing a lot of research regarding extraterrestrial atmospheres.
 
 Laura snatches the cone out of Annika's hand.
 
@@ -156,12 +161,6 @@ ANNIKA
 Oh. Well I'm sure all of this has proved very insightful.
 
 Laura clenches down.
-
-/*
-
-One of the posse members needs to be wheeling a cryogenic cooler or something. Remember, her project is over the topppp! What is your image of what that would be?
-
-*/
 
 ANNIKA
 Sure must have been nice working on a topic in such a glamorous field of study. 'Would have loved to do a space project, you know. But, alas, duty calls. I really felt that my efforts could be of the most benefit in the biomedical realm. My gene enhancement compound might not be as dazzling as your rocket, but I guess we'll just have to leave it up to the judges, won't we?
@@ -199,25 +198,19 @@ Anyhoo, the judges' votes are in and it's time to announce the award winners. Bu
 
 INT. HIGH SCHOOL HALLWAY - DAY
 
-We hold on set of doors with a "Costodial Closet" sign next to them. The faint CLAPPING can be heard coming from the gym.
+We hold on set of doors with a "Phys Ed Equipment Closet" sign next to them. The faint CLAPPING can be heard coming from the gym.
 
 SCIENCE TEACHER (OS)
 Now, without further adieu, on to the awards.
 
-We begin to PUSH IN on the janitors closet.
+We begin to PUSH IN on the equipment closet.
 
 SCIENCE TEACHER (OS)
 The award for "most environmental" project goes to James Strop - River Ecosystems.
 
-INT. JANITOR'S CLOSET - DAY
+INT. EQUIPMENT CLOSET - DAY
 
-/*
-
-Could this be a science closet and the wrench / bat be a science thing?
-
-*/
-
-Laura sits in the closet with her arms wrapped around her knees, cheeks wet, staring at a huge pipe wrench.
+Laura sits in the closet with her arms wrapped around her knees, cheeks wet, staring at a pile of baseball bats.
 
 SCIENCE TEACHER
 The award for "most technological" goes to Sam Rainer - Robot Showdown.
@@ -233,22 +226,14 @@ And now, the moment you've all been waiting for.
 
 INT. HALLWAY - DAY
 
-Laura marches down the hall with the bat/wrench and a crazed look in her eyes.
+Laura marches down the hall dragging a baseball bat. She has a crazed look in her eyes.
 
 SCIENCE TEACHER (OS)
 The grand prize winner of this years science fair is --
 
-/*
+INT. GYMNASIUM - CONTINUOUS
 
-Low angle pointing up toward a MCU of her. We're tracking back with her as she walks.
-
-Then low of the bat dragging behind her with only her lower legs and feet and bat in the frame.
-
-*/
-
-INT. GYM - CONTINUOUS
-
-The students wait with baited breath.
+The students wait with baited breath. Time slows down and sounds become deeper and drawn out.
 
 The song *Say My Name* by Tove Styrke begins to play.
 
@@ -256,7 +241,7 @@ Laura turns to the camera, breaking the fourth wall, and begins dancing - full o
 
 She dances through the aisles of projects and starts knocking poster boards over and sliding displays off of tables onto the floor.
 
-Some victimized students start to stand up to her, but everyone quickly steps back when she grabs a baseball bat from a students gym bag and starts demolishing projects. She's swinging for the fences with a mad look in her eyes.
+Some victimized students start to stand up to her, but everyone quickly steps back when she starts using the baseball bat to it's full potential.  She's absolutely mad and swinging for the fences.
 
 Everyone seeks cover behind chair and bleachers or against the walls of the gym.
 
@@ -266,26 +251,28 @@ The fat science teacher runs in and tells the principal.
 
 INT. HALLWAY - DAY
 
-Cops walk down the hall.
+Cops with mustaches strut down the hall.
 
-INT. GYM - DAY
+INT. GYMNASIUM - DAY
 
 Laura is beating down a paper maché volcano when she notices the cops. They apprehend her and begin to drag her out of the gym. She resists by flailing and kicking here legs.
 
-As they pass Annika's gene enhancement project, one of Laura's kicks bumps the table. The force knocks one of test tubes loose. It falls into a Petri dish on the adjacent table (River Ecosystems) and the dish starts to bubble and ooze. And mutant green webbed hand comes out of the ooze.
+As they pass Annika's gene enhancement project, one of Laura's kicks bumps the table. The force knocks one of test tubes loose. It falls into a Petri dish on the adjacent table (River Ecosystems) and the dish starts to bubble and ooze. Immediately, a mutant green webbed hand begins to emerge from the ooze.
 
-Everyone is too busy paying attention to Laura being pulled out of the gym by the police that no one notices the huge mutant monster that has evolved from the combination of Annika's gene enhancement compound and the microorganism from the river ecosystems project.
-
-When the monster is fully formed, it grabs Annika by her ponytail and begins to devour her. Annika's screams draw everyone's attention to the monster and away from Laura and the cops.
+The monster is now fully formed. Everyone is so busy paying attention to Laura being pulled out of the gym by the cops that no one notices the huge mutant monster that has evolved. It grabs Annika by her ponytail and begins to devour her. Annika's screams draw everyone's attention to the monster and away from Laura and the cops.
 
 The cops turn to see Annika getting eaten. They drop Laura and run toward the grizzly scene as they draw their guns and shoot. Everyone in the gym flees in panic.
 
 INT. HALLWAY - DAY
 
-Laura is running in the pack of panicking students. They pass the sign "Science Fair Today! How science are you?". Laura stops and looks at the sign. Then, with determination, she turns around a marches against the rushing current of escapees.
+Laura is running with the pack of panicking students. They pass the display case "Science Fair Today!" with the picture of Annika from her previous wins. Laura stops and looks at faceless avatar placeholder for this years winner. Then, with determination, she turns around a marches against the rushing current of escapees.
 
 INT. HIGH SCHOOL GYM - DAY
 
 The monster is feasting on the torn open bodies of Annika and the cops.
 
-Laura enters the gym. As she passes her project table, she assembles a makeshift torpedo launcher with her rocket and some of Norman's pool cleaning acid. She places the rocket on her shoulder as she gets down on one knee. With zero hesitation, she fires the rocket at the monster. The acid explodes upon impact and the monster begins to melt.
+Laura enters the gym. As she passes her project table, she assembles a makeshift torpedo launcher with her rocket and some of Norman's pool cleaning acid. She places the rocket on her shoulder as she gets down on one knee. With zero hesitation, she fires the rocket at the monster. The acid explodes upon impact and the monster melts into the floor.
+
+The song ends.
+
+>FADE OUT
